[gd_scene load_steps=29 format=2]

[ext_resource path="res://src/Actors/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/Player/Run/run_skeleton_2.png" type="Texture" id=2]
[ext_resource path="res://assets/Sprites/Player/Run/run_skeleton_1.png" type="Texture" id=3]
[ext_resource path="res://assets/Sprites/Player/Run/run_skeleton_7.png" type="Texture" id=4]
[ext_resource path="res://assets/Sprites/Player/Run/run_skeleton_3.png" type="Texture" id=5]
[ext_resource path="res://assets/Sprites/Player/Run/run_skeleton_4.png" type="Texture" id=6]
[ext_resource path="res://assets/Sprites/Player/Run/run_skeleton_5.png" type="Texture" id=7]
[ext_resource path="res://assets/Sprites/Player/dash_lines_1.png" type="Texture" id=8]
[ext_resource path="res://assets/Sprites/Player/Run/run_skeleton_6.png" type="Texture" id=9]
[ext_resource path="res://assets/Sprites/Player/Run/run_skeleton_8.png" type="Texture" id=10]
[ext_resource path="res://assets/Sprites/Player/Run/run_skeleton_9.png" type="Texture" id=11]
[ext_resource path="res://src/UI/DebugUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/Sprites/Player/Attack/attack_skeleton_3.png" type="Texture" id=13]
[ext_resource path="res://src/Weapons/GunRotating.tscn" type="PackedScene" id=14]
[ext_resource path="res://assets/Sprites/Player/Attack/attack_skeleton_2.png" type="Texture" id=15]
[ext_resource path="res://assets/Sprites/Player/Attack/attack_skeleton_4.png" type="Texture" id=16]
[ext_resource path="res://assets/Sprites/Player/Attack/attack_skeleton_5.png" type="Texture" id=17]
[ext_resource path="res://assets/Sprites/Player/Attack/attack_skeleton_7.png" type="Texture" id=18]
[ext_resource path="res://assets/Sprites/Player/Attack/attack_skeleton_1.png" type="Texture" id=19]
[ext_resource path="res://assets/Sprites/Player/Attack/attack_skeleton_6.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "Dash",
"speed": 16.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "Idle",
"speed": 16.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 18 ) ],
"loop": true,
"name": "Attack",
"speed": 16.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "Run",
"speed": 16.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 34.853
height = 52.6407

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16.2636, 5.35246 )

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 3,
"values": [ 0.0 ]
}

[sub_resource type="Gradient" id=5]
colors = PoolColorArray( 0.0883522, 0.642512, 0.983398, 1, 0.12549, 0.788235, 0.901961, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.5
emission_shape = 2
emission_box_extents = Vector3( 30, 60, 1 )
flag_disable_z = true
spread = 10.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = -500.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 40.0
scale_random = 0.6
color_ramp = SubResource( 6 )
hue_variation = 0.04
hue_variation_random = 0.67

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 35.1768, 45.9433 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( -32, 48 )
collision_mask = 0
script = ExtResource( 1 )

[node name="DebugUI" parent="." instance=ExtResource( 12 )]
margin_left = 32.0
margin_top = -40.0
margin_right = 32.0
margin_bottom = -40.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 32.125, -40.125 )
scale = Vector2( 0.199609, 0.199609 )
frames = SubResource( 1 )
animation = "Idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 30.4108, -39.4703 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 30.1947, 17.4811 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/rotate_up = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 32, -40 )
current = true
zoom = Vector2( 1.25, 1.25 )
smoothing_enabled = true
smoothing_speed = 14.0
drag_margin_left = 0.01
drag_margin_top = 0.01
drag_margin_right = 0.01
drag_margin_bottom = 0.01

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="IsExhaustedTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="DebugTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Position2DGunMuzzle" type="Position2D" parent="."]
position = Vector2( 108.689, -70.4731 )

[node name="GunRotating" parent="." instance=ExtResource( 14 )]
position = Vector2( 80, -56 )
scale = Vector2( 0.072, 0.072 )
magazine_size = 25

[node name="Position2DGunOrigin" type="Position2D" parent="."]
position = Vector2( 31.75, -47.75 )

[node name="ParticlesDash" type="Particles2D" parent="."]
position = Vector2( 32, -48 )
amount = 120
lifetime = 0.7
process_material = SubResource( 7 )

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2( 30.2723, -48.3515 )
collision_layer = 32
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 67.687, -2.93022 )
shape = SubResource( 8 )
disabled = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="IsExhaustedTimer" to="." method="_on_IsExhaustedTimer_timeout"]
[connection signal="timeout" from="DebugTimer" to="." method="_on_DebugTimer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
